# lithrim

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.bff  Dockerfile.ui  LICENSE  Makefile  README.md  REPRODUCING.md  SECURITY.md  SETUP.md  conftest.py  docker-compose.yml  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  overclaim_report.md
.github/workflows/: canary.yml  ci.yml  release-images.yml
apps/bff/: README.md  app.py
apps/shell/: README.md  components.json  index.html  package-lock.json  package.json  vite.config.js
data/: MANIFEST.md  picklist_fhir_mini.json
data/synthea_2026-05-28/: MANIFEST.txt
data/verification_packs/: README.md  fhir_observation_v1.jsonl  fhir_patient_v1.jsonl  transaction_v1.jsonl
deploy/: docker-compose.yml
docs/: AGENT_SKILLS.md  ARCHITECTURE.md  CAPABILITY_CARD.md  DEPLOY.md  EVAL_BENCHMARK_AND_DETERMINISM_SPEC.md  JUTE_MAPPER_ADDON.md  ONTOLOGY_FLAG_LIFECYCLE.md  POLICY_HOLDOUT_HYGIENE.md  README.md  SNOMED_SETUP.md
docs/reproduction/: FABLE5_RESEARCH_CONTEXT_PREAMBLE.md  RUN_PLAN_PUBLIC_CUT.md  UPCODE_SIBLING_DEFECT_FAMILIES.md
docs/specs/: SPEC_TOOL_CONNECTORS.md
examples/_core/: baseline._core_fabricated_claim.json
examples/clinical_scribe/: clinical_scribe_v1.jsonl
lithrim_bench/: __init__.py  analysis.py  canary.py  encounter_spec.py  eval_runner.py  packager.py  packs.py  picklist.py  reliability.py  synthea_fhir_loader.py  synthea_loader.py  taxonomy.py
lithrim_bench/backends/: __init__.py  base.py  etlp_structural.py  http.py  lithrim_pipeline.py  lithrim_validate_artifact.py  local_pipeline.py  mock.py  tuned_mock.py  worst_of.py
lithrim_bench/harness/: __init__.py  admissibility.py  audit.py  backend.py  calib_corpus.py  cases_store.py  collections.py  config.py  corpus.py  correction.py  criterion.py  db.py  evalpack.py  finding_units.py  grade.py  grounding.py  grounding_check.py  headline.py  judge_authoring.py  judge_cache.py  judge_sets.py  judges.py  migrations.py  model_policy.py  ontology.py  pack.py  pack_gate.py  persist.py  plugins.py  readiness.py  registry_store.py  replay.py  report.py  reports_store.py  role_bindings.py  tools_store.py  versioning.py  workspace.py
lithrim_bench/importers/: __init__.py  backend_demo.py
lithrim_bench/injectors/: __init__.py  base.py
lithrim_bench/runtime/: README.md  __init__.py
lithrim_bench/verification/: __init__.py  argshape_gate.py  etlp_client.py  extraction_floors.py  ingest_decode.py  jute_argshape.py  jute_dspy.py  jute_extractor.py  jute_gen.py  mcp_client.py  mutation.py  router.py  snomed_floor.py  spec.py  storyworld_client.py  tools.py
migrations/: 0001.provenance.sql
packs-dropin/: README.md
packs/_core/: ontology.json  pack.json  taxonomy_snapshot.json
packs/_nondeployable_fixture/: pack.json  taxonomy_snapshot.json
packs/_plugin_fixture/: floors.py  pack.json  taxonomy_snapshot.json  tools.json
packs/_tiers_fixture/: pack.json  taxonomy_snapshot.json
packs/clinical_scribe/: ontology.json  pack.json  taxonomy_snapshot.json
packs/support_ticket_qa/: ontology.json  pack.json  taxonomy_snapshot.json
repro/: arms.json  cohort_runner.py  consolidate.py  ontology_armR.json  ontology_armT.json  role_binds.json  run_arms.py  scrub_corpus.py  setup_streams.py
repro/corpus/: clean_generalization_negatives.jsonl  cv_bidirectional_44_bundle.jsonl  upcoded_positives.jsonl
repro/corpus_v2/: SCRUB_DIFF.md  clean_generalization_negatives.jsonl  scrub_map.json  (+2 more)
samples/: README.md
scripts/: analyze_runs.py  build_label_owner_matrix.py  canary_judges.py  demo.py  extract_clinical_scribe.py  headline_report.py  lint_golden_against_taxonomy.py  meta_eval_timeline.py  optimize_judge.py  run_determinism.py  run_eval.py  run_eval_pack.py  snapshot_taxonomy.py
snomed/: README.md  logback-stderr.xml
tests/: _factories.py  _house_fixture.py  _needles.py  _seam_freeze.py  conftest.py  test_6bclean_attestation.py  test_6bclean_reroute.py  test_6bclean_seam_guard.py  test_asafe_tool_gate.py  test_audit.py  test_azure_api_version_runtime.py  test_backend_importer.py  test_bff_readiness.py  test_bff_reliability.py  test_bff_reliability_sweep.py  test_bff_stale_replay.py  test_bff_units.py  test_binding_clear.py  test_brs_0b_section_7_invariance.py  test_byoc_provider.py  test_byok_openai.py  test_cache_trap_2.py  test_calib_corpus.py  test_canary_judges.py  test_chat_cliff.py  test_chat_zero_dollar_replay.py  test_chatbind2_pane.py  test_chatbind_active_agent.py  test_clinical_scribe_sample.py  test_clinverdict_mts_sample.py  test_consensus_pillar_invariant.py  test_conv_runtime.py  test_conv_runtime_confirm_fallback.py  test_criterion_jute_1a.py  test_criterion_jute_1b.py  test_criterion_jute_1c.py  test_criterion_jute_1d.py  test_criterion_text1.py  test_criterion_writer.py  test_cross_pin_guard.py  (+122 more)
validators/: fhir_us_core_patient_validator.generated.jute  hl7_adt_a04_strict.yaml
(+314 files in other folders)
